--- a/style.css
+++ b/style.css
@@ -62,14 +62,14 @@ body
     background-color: #4CAF50; 
     color: white; 
     border: 2px solid #4CAF50;
-    padding: 15px 32px;
+    padding: 30px 60px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     position:absolute;
-    top:1200px;
-    left:500px;
+    top:50%;
+    left:50%;
     border-radius: 6px;
     transition-duration: 0.4s;
 }
@@ -91,13 +91,36 @@ body
     display: inline-block;
     font-size: 16px;
     position:absolute;
-    top:1200px;
-    left:300px;
+    top:80%;
+    left:20%;
     border-radius: 6px;
     transition-duration: 0.4s;
 }
 
 #hitButton:hover 
+{
+    background-color: white; /* Green */
+    color: black;
+}
+
+#stickButton
+{
+    background-color: #4CAF50; 
+    color: white; 
+    border: 2px solid #4CAF50;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    position:absolute;
+    top:80%;
+    left:30%;
+    border-radius: 6px;
+    transition-duration: 0.4s;
+}
+
+#stickButton:hover 
 {
     background-color: white; /* Green */
     color: black;
@@ -114,6 +137,7 @@ body
 
 .butt1, .butt2, .butt3, .butt4, .butt5
 {
+    left: 90%;
     background-color: #4CAF50; 
     color: white; 
     border: 2px solid #4CAF50;
@@ -177,4 +201,19 @@ body
     left:90%;
     border-radius: 6px;
     transition-duration: 0.4s;
+}
+
+.crdScoreHolder
+{
+    background-color: black; 
+    color: white; 
+    border: 2px solid #4CAF50;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    height: 75px;
+    width: 100px;
+    font-size: 16px;
+    top: 10%;
+    left:50%
 }
